# codilityTasks

./: CMakeLists.txt  Dockerfile  README.md
CountNonDivisible/: CMakeLists.txt  countNonDivisible.cpp
Dominator/: CMakeLists.txt  dominator.cpp
EquiLeader/: CMakeLists.txt  equiLeader.cpp
Flags/: CMakeLists.txt  flags.cpp  lesson10sample.cpp
GenomicRangeQuery/: CMakeLists.txt  genomicRangeQuery.cpp  l5.cpp  les5.cpp
MaxCounters/: CMakeLists.txt  maxCounters.cpp
MaxDoubleSliceSum/: CMakeLists.txt  maxDoubleSliceSum.cpp
MaxSliceSum/: CMakeLists.txt  maxSliceSum.cpp
MinAvgTwoSlice/: CMakeLists.txt  minAvgTwoSlice.cpp
Nesting/: CMakeLists.txt  nesting.cpp
NumOfDiscIntersections/: CMakeLists.txt  numOfDiscIntersection2.cpp  numOfDiscIntersections.cpp
Peaks/: CMakeLists.txt  peaks.cpp
StoneWall/: CMakeLists.txt  stoneWall.cpp
TapeEquilibrium/: CMakeLists.txt  tapeEquilibrium.cpp
Triangle/: CMakeLists.txt  triangle.cpp
lesson10/: lesson10.cpp
lesson10_2/: lesson10_2.cpp
lesson11/: lesson11.cpp
lesson3/: lesson3.cpp
lesson4/: lesson4.cpp
lesson5/: l5.cpp  lesson5.cpp
lesson5_2/: lesson5_2.cpp
lesson6/: lesson6.cpp
lesson6_2/: lesson6_2.cpp
lesson7/: lesson7.cpp
lesson7_2/: lesson7_2.cpp
lesson8/: lesson8.cpp
lesson8_2/: l8_2.cpp  lesson8_2.cpp
lesson9/: lesson9.cpp
lesson9_2/: lesson9_2.cpp
