cmake_minimum_required(VERSION 3.25.1)
project(codiltyTasks)

add_subdirectory(CountNonDivisible)
add_subdirectory(Dominator)
add_subdirectory(EquiLeader)
add_subdirectory(Flags)
add_subdirectory(GenomicRangeQuery)
add_subdirectory(MaxCounters)
add_subdirectory(MaxDoubleSliceSum)
add_subdirectory(MaxSliceSum)
add_subdirectory(MinAvgTwoSlice)
add_subdirectory(Nesting)
add_subdirectory(NumOfDiscIntersections)
add_subdirectory(Peaks)
add_subdirectory(StoneWall)
add_subdirectory(TapeEquilibrium)
add_subdirectory(Triangle)
